# ras-search_ai-rag-westlaw-50-states-survey-main

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  poetry.toml  pyproject.toml
.github/: env-variables.txt  release-drafter.yml
.github/scripts/: sca-workspace-hash.py
.github/workflows/: python-build.yml  release.yml
app/: main.py
app/config/: celery_config.py  settings.py
app/config/resources/: .env.ci  .env.ci.yaml  .env.dev  .env.dev.yaml  .env.int  .env.int.yaml  .env.labs  .env.local  .env.local.yaml  .env.prod  .env.prod.yaml  .env.qa  .env.qa.yaml  .env.test
app/models/: legislation_survey_result.py
app/resources/: additional_supporting_material_responses.json  email_failure.html  email_success.html  open_ai_mock_responses.json
app/services/: common_services.py  email_service.py  helm_service.py  validation_service.py
app/services/v4/: action_sequencing_service.py  conversation_service.py  validation_service.py
app/utils/: common_util.py  converters.py  custom_exceptions.py  exception_mappings.py
app/worker/v4/: action_sequencing_tasks.py
cicd/: publish-docker-images.py
helm2/application/: Chart.yaml  values.yaml
helm2/application/templates/: _helpers.tpl  deployment.yaml  destination-rule.yaml  hpa.yaml  pdb.yaml  virtualservice.yaml
helm2/infrastructure/: Chart.yaml  values.yaml
helm2/infrastructure/templates/: _helpers.tpl  authorization-policy.yaml  role.yaml  rolebinding.yaml  service-account.yaml  service.yaml
scripts/: get_helm.sh
tests/: conftest.py  postdeploy.py
tests/config/: test_settings.py
tests/data/: generated_additional_content.json  generated_additional_content_snippets.json  generated_answer.json  generated_answer_cites.json  generated_answer_cites_reranked.json
tests/services/: __init__.py  test_additional_content_service.py  test_answer_profile_service.py  test_common_services.py  test_email_service.py  test_summarize_service.py  test_validation_service.py
tests/services/v4/: test_action_sequencing_service.py  test_conversation_service.py  test_validation_service.py
tests/utils/: __init__.py  test_common_util.py  test_converters.py  test_exception_mappings.py  test_helm.py  test_reranker.py
tests/worker/: conftest.py
tests/worker/v4/: test_action_sequencing_tasks.py
